<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menus">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_map" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_map" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView18"
        app:srcCompat="@drawable/car" />

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:background="@color/amazing_bg1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:id="@+id/itemHistory"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/iconhistory" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menuItem1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemSettings"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/iconsettings" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menuItem2"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/amazing_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:text="@string/ex_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="@string/ex_city" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/iconmenuwithoutround" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>